Fix docs: 404 in URLs for docker resourse (#2974)
Signed-off-by: morkot <melekhovskiy@gmail.com>

--- a/docs/resources/docker.md.erb
+++ b/docs/resources/docker.md.erb
@@ -5,7 +5,7 @@ platform: linux
 
 # docker
 
-Use the `docker` InSpec audit resource to test configuration data for the Docker daemon. It is a very comprehensive resource. See also: [docker_container](docker_container) and [docker_image](docker_image), too.
+Use the `docker` InSpec audit resource to test configuration data for the Docker daemon. It is a very comprehensive resource. See also: [docker_container](https://www.inspec.io/docs/reference/resources/docker_container/) and [docker_image](https://www.inspec.io/docs/reference/resources/docker_image/), too.
 
 <br>
 
