#2810 - Add check if aws s3 bucket is encrypted. (#2937)
* Add check if aws s3 bucket is encrypted.
Required terraform aws provider >= 1.6
Fix indentation issue in aws_s3_bucket.rb

* Implement most changes recommended by @TrevorBramble, and refactored other methods to align with recommendations (except Terraform nitpick; preference is to keep coding style consistent until full refactor).

Signed-off-by: Jeremy Phillips <github@uranusbytes.com>

--- a/docs/resources/aws_s3_bucket.md.erb
+++ b/docs/resources/aws_s3_bucket.md.erb
@@ -132,3 +132,9 @@ Note: This resource does not detect insecure object ACLs.
 The `have_access_logging_enabled` matcher tests if access logging is enabled for the s3 bucket.
 
     it { should have_access_logging_enabled }
+
+### have\_default\_encryption\_enabled
+
+The `have_default_encryption_enabled` matcher tests if default encryption is enabled for the s3 bucket.
+
+    it { should have_default_encryption_enabled }
