--- a/docs/resources/npm.md.erb
+++ b/docs/resources/npm.md.erb
@@ -5,7 +5,7 @@ platform: os
 
 # npm
 
-Use the `npm` InSpec audit resource to test if a global NPM package is installed. NPM is the the package manager for Node.js packages (https://docs.npmjs.com), such as Bower and StatsD.
+Use the `npm` InSpec audit resource to test if a global NPM package is installed. NPM is the the package manager for [Node.js packages](https://docs.npmjs.com), such as Bower and StatsD.
 
 <br>
 
