deprecate azure_generic_resource (#3132)
* deprecate azure_generic_resource

Signed-off-by: Christoph Hartmann <chris@lollyrock.com>

--- a/docs/resources/azure_generic_resource.md.erb
+++ b/docs/resources/azure_generic_resource.md.erb
@@ -4,6 +4,8 @@ title: About the azure_generic_resource Resource
 
 # azure\_generic\_resource
 
+<p class="warning">This resource is deprecated and should not be used. It will be removed in InSpec 3.0.</p>
+
 Use the `azure_generic_resource` InSpec audit resource to test any valid Azure Resource. This is very useful if you need to test something that we do not yet have a specific Inspec resource for.
 
 ## Syntax
