Backport filtertable / 'where' functionality on shadow resource to 1.x series (#3154)
* Update shadow resource to use FilterTable (#2642)

* Change shadow resource to use FilterTable rather than custom filter
implementation.

Add tests for singluar aliased methods and other minor changes to work
with FilterTable output.
Coverage is at 100%

* Ensure resource has plural properties and singular filter criteria, as it did prior to filtertable-ization

Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/docs/resources/shadow.md.erb
+++ b/docs/resources/shadow.md.erb
@@ -92,11 +92,11 @@ This matcher is best used in conjunction with filters. For example:
        its('count') { should eq 1 }
     end
 
-### expiry_dates
+### expiry_date
 
-The `expiry_dates` matcher tests the number of days a user account has been disabled:
+The `expiry_date` matcher tests the number of days a user account has been disabled:
 
-    its('expiry_dates') { should eq '' }
+    its('expiry_date') { should eq '' }
 
 ### inactive_days
 
