docs: Add link to the file resource from directory (#3517)

--- a/docs/resources/directory.md.erb
+++ b/docs/resources/directory.md.erb
@@ -5,7 +5,7 @@ platform: os
 
 # directory
 
-Use the `directory` InSpec audit resource to test if the file type is a directory. This is equivalent to using the `file` resource and the `be_directory` matcher, but provides a simpler and more direct way to test directories.
+Use the `directory` InSpec audit resource to test if the file type is a directory. This is equivalent to using the [`file` resource](https://www.inspec.io/docs/reference/resources/file/) and the `be_directory` matcher, but provides a simpler and more direct way to test directories.
 
 <br>
 
@@ -31,7 +31,7 @@ A `directory` resource block declares the location of the directory to be tested
 
 ## Properties
 
-All of the properties available to `file` may be used with `directory`.
+All of the properties available to [`file`](https://www.inspec.io/docs/reference/resources/file/) may be used with `directory`.
 
 <br>
 
