Makes whole brew command visible (#3584)
* Makes whole brew command visible
* replaces shadow & margin

Signed-off-by: kagarmoe <kgarmoe@chef.io>

--- a/www/source/downloads.html.slim
+++ b/www/source/downloads.html.slim
@@ -39,7 +39,7 @@ header.bg-gradient.margin-top-offset.short-bg.relative
             a href="https://brew.sh/" Homebrew
             '  package.
           .pad-under-xs
-            .box-code.box-code-overwrite.shadow.margin-top-xs
+            .box-code.small.shadow.margin-top-xs
              i#copy.fa.fa-copy.copy.t-purple.mobile-hide onclick="copyToClipboard('#install')"
              code#install brew cask install chef/chef/inspec
         .triangle-right
