Added xml resource support for ints, bools, and string responses (#3583)
Methods like…

* `count()` return `Integer` values
* `boolean()` return `TrueClass`/`FalseClass` values
* `concat()` return `String` values

…but threw exceptions because those types weren't supported.

This adds support to the `xml` resource, and adds tests to verify some of those examples.

Signed-off-by: Mark Hughes <greenantdotcom@users.noreply.github.com>

--- a/docs/resources/xml.md.erb
+++ b/docs/resources/xml.md.erb
@@ -52,6 +52,8 @@ This file can be queried for attributes using:
       its('root/array[2]/element/@value') { should eq ['one', 'two'] }
       its('root/array[2]/element/attribute::value') { should eq ['one', 'two'] }
       its('root/array[2]/element[2]/attribute::value') { should eq ['two'] }
+      its('count(//*)') { should eq [42] }
+      its('boolean(root/array[2]/element[2]/@valid)') { should eq [false] }
     end
 
 where
