Fix `labels` on Docker containers (#3673)
Signed-off-by: Jerry Aldrich <jerryaldrichiii@gmail.com>

--- a/docs/resources/docker.md.erb
+++ b/docs/resources/docker.md.erb
@@ -136,7 +136,7 @@ Or execute the profile directly via URL:
       its('commands') { should_not include '/bin/sh' }
       its('images') { should_not include 'u12:latest' }
       its('ports') { should include '0.0.0.0:1234->1234/tcp' }
-      its('labels') { should include 'License=GPLv2,Vendor=CentOS' }
+      its('labels') { should include 'License=GPLv2' }
     end
 
 ### object('id')
